Implementação da estrutura do ms-historico, repository, controller, ajuste no swagger, implementação do inserir e buscar, gateways e mappers
