# src/main/java/com/ms/historico/infraestrutura/database/entities/HistoricoEntity.java
@@ -1,21 +1,33 @@
 package com.ms.historico.infraestrutura.database.entities;
 
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
 import lombok.Data;
-import org.springframework.data.mongodb.core.mapping.Document;
+import lombok.NoArgsConstructor;
 
-import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
 
 @Data
-@Document(collection = "historicos")
+@AllArgsConstructor
+@NoArgsConstructor
+@Entity
+@Table(name = "tb_historicos")
 public class HistoricoEntity {
 
     @Id
-    private String id;
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id_historico")
+    private Long idHistorico;
 
-    private String idPaciente;
+    @Column(name = "id_paciente")
+    private Long idPaciente;
 
-    private LocalDateTime data;
+    private OffsetDateTime data;
 
     private String hospital;
 
